# cronduit

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  MILESTONES.md  README.md  THREAT_MODEL.md  build.rs  cliff.toml  deny.toml  justfile  rust-toolchain.toml  tailwind.config.js
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yml  cleanup-cache.yml  cleanup-images.yml  compose-smoke.yml  main-build.yml  release.yml
.planning/: BACKLOG.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-MILESTONE-AUDIT.md
.planning/milestones/v1.0-research/: ARCHITECTURE.md  PITFALLS.md  SUMMARY.md
.planning/milestones/v1.1-research/: PITFALLS.md  STACK.md
.planning/phases/01-foundation-security-posture-persistence-base/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-04-PLAN.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-07-PLAN.md  01-07-SUMMARY.md  01-08-PLAN.md  01-09-PLAN.md  01-REVIEW-FIX.md  01-REVIEW.md  01-UAT.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-scheduler-core-command-script-executor/: 02-01-PLAN.md  02-02-PLAN.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-SECURITY.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-read-only-web-ui-health-endpoint/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-06-PLAN.md  03-06-SUMMARY.md  03-HUMAN-UAT.md  03-RESEARCH.md  03-REVIEW-FIX.md  03-REVIEW.md  03-UI-SPEC.md  03-VALIDATION.md
.planning/phases/04-docker-executor-container-network-differentiator/: 04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-HUMAN-UAT.md  (+5 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/seeds/: SEED-001-custom-docker-labels.md
assets/src/: app.css
assets/static/: app.css  theme.js
design/: DESIGN_SYSTEM.md  showcase.html
docs/: CI_CACHING.md  CONFIG.md  QUICKSTART.md  SPEC.md  WEBHOOKS.md  release-rc.md
examples/: cronduit.toml  docker-compose.secure.yml  docker-compose.yml  prometheus.yml  webhook_mock_server.rs
migrations/postgres/: 20260410_000000_initial.up.sql  20260416_000001_job_run_number_add.up.sql  20260417_000002_job_run_number_backfill.up.sql  20260418_000003_job_run_number_not_null.up.sql  20260422_000004_enabled_override_add.up.sql  20260427_000005_image_digest_add.up.sql  20260427_000006_config_hash_add.up.sql  20260427_000007_config_hash_backfill.up.sql  20260428_000006_config_hash_add.up.sql  20260429_000007_config_hash_backfill.up.sql  20260502_000008_webhook_deliveries_add.up.sql  20260502_000009_scheduled_for_add.up.sql  20260503_000009_scheduled_for_add.up.sql  20260504_000010_jobs_tags_add.up.sql
migrations/sqlite/: 20260410_000000_initial.up.sql  20260416_000001_job_run_number_add.up.sql  20260417_000002_job_run_number_backfill.up.sql  20260418_000003_job_run_number_not_null.up.sql  20260422_000004_enabled_override_add.up.sql  20260427_000005_image_digest_add.up.sql  20260427_000006_config_hash_add.up.sql  20260427_000007_config_hash_backfill.up.sql  20260428_000006_config_hash_add.up.sql  20260429_000007_config_hash_backfill.up.sql  20260502_000008_webhook_deliveries_add.up.sql  20260502_000009_scheduled_for_add.up.sql  20260503_000009_scheduled_for_add.up.sql  20260504_000010_jobs_tags_add.up.sql
scripts/: update-project.sh  verify-latest-retag.sh
src/: lib.rs  main.rs  shutdown.rs  telemetry.rs
src/cli/: check.rs  health.rs  mod.rs  run.rs
src/config/: defaults.rs  errors.rs  hash.rs  interpolate.rs  mod.rs  validate.rs
src/db/: migrate_backfill.rs  mod.rs  queries.rs
src/scheduler/: cmd.rs  command.rs  control.rs  docker.rs  docker_daemon.rs  docker_log.rs  docker_orphan.rs  docker_preflight.rs  docker_pull.rs  fire.rs  log_pipeline.rs  mod.rs  random.rs  reload.rs  retention.rs  run.rs  script.rs  sync.rs
src/web/: ansi.rs  assets.rs  csrf.rs  exit_buckets.rs  format.rs  mod.rs  stats.rs
src/webhooks/: coalesce.rs  dispatcher.rs  event.rs  mod.rs  payload.rs  retry.rs  worker.rs
templates/: base.html
templates/pages/: dashboard.html  job_detail.html  run_detail.html  settings.html  timeline.html
templates/partials/: job_table.html  log_viewer.html  run_history.html  static_log_viewer.html  timeline_body.html  toast.html
tests/: Dockerfile.ops08-old  api_run_now.rs  check_command.rs  compose-override.yml  config_parser.rs  dashboard_jobs_pg.rs  dashboard_render.rs  db_pool_postgres.rs  db_pool_sqlite.rs  defaults_merge.rs  docker_config_behavior.rs  docker_container_network.rs  docker_daemon_preflight.rs  docker_executor.rs  docker_orphan_guard.rs  graceful_shutdown.rs  health_endpoint.rs  job_detail_partial.rs  jobs_api.rs  justfile_recipes_test.sh  metrics_endpoint.rs  metrics_stopped.rs  migrations_idempotent.rs  process_group_kill.rs  reload_api.rs  reload_file_watch.rs  reload_inflight.rs  reload_random_stability.rs  reload_sighup.rs  retention_integration.rs  retention_webhook_fk.rs  scheduler_integration.rs  schema_parity.rs  sse_streaming.rs  startup_event.rs  stop_executors.rs  stop_handler.rs  stop_race.rs  v11_bulk_toggle.rs  v11_bulk_toggle_pg.rs  (+43 more)
tests/common/: mod.rs  v11_fixtures.rs
tests/fixtures/: invalid-bad-network.toml  invalid-duplicate-job.toml  invalid-missing-env-var.toml  invalid-missing-timezone.toml  invalid-multiple-job-types.toml  invalid-multiple.toml  invalid-schedule.toml  valid-everything.toml  valid-minimal.toml  valid-with-secrets.toml
(+586 files in other folders)
