[package]
name = "cronduit"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"
description = "Self-hosted Docker-native cron scheduler with a web UI"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SimplicityGuy/cronduit"
readme = "README.md"

[lib]
name = "cronduit"
path = "src/lib.rs"

[[bin]]
name = "cronduit"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.51", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["rt"] }

# HTTP / web placeholder
axum = { version = "0.8.8", default-features = false, features = ["tokio", "http1"] }
tower-http = { version = "0.6.8", default-features = false, features = ["trace"] }
hyper = { version = "1", default-features = false }

# Database — rustls-only (Pitfall 14 / FOUND-06)
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "postgres",
    "chrono",
    "migrate",
    "macros",
] }

# Config parsing
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
humantime = "2.3.0"
humantime-serde = "1.1.1"

# CLI
clap = { version = "4.6", features = ["derive", "env"] }

# Telemetry
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", default-features = false, features = [
    "env-filter",
    "fmt",
    "json",
    "ansi",
    "smallvec",
] }

# Errors
anyhow = "1.0.102"
thiserror = "2.0.18"

# Secrets (serde feature is MANDATORY — D-20)
secrecy = { version = "0.10.3", features = ["serde"] }

# Time
chrono = { version = "0.4.44", default-features = false, features = ["std", "serde", "clock"] }
chrono-tz = "0.10.4"

# Utilities
sha2 = "0.10"
serde_json = "1"
url = "2"
regex = "1"
once_cell = "1"

[dev-dependencies]
testcontainers = "0.27.2"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
