[package]
name = "cronduit"
version = "1.1.0"
edition = "2024"
rust-version = "1.94.1"
description = "Self-hosted Docker-native cron scheduler with a web UI"
license = "MIT"
repository = "https://github.com/SimplicityGuy/cronduit"
readme = "README.md"

[lib]
name = "cronduit"
path = "src/lib.rs"

[[bin]]
name = "cronduit"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.51", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["rt"] }

# HTTP / web placeholder
axum = { version = "0.8.8", default-features = false, features = ["tokio", "http1", "http2", "json", "query", "form"] }
tower-http = { version = "0.6.8", default-features = false, features = ["trace"] }
hyper = { version = "1", default-features = false }

# Database — rustls-only (Pitfall 14 / FOUND-06)
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "postgres",
    "chrono",
    "migrate",
    "macros",
] }

# Config parsing
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
humantime = "2.3.0"
humantime-serde = "1.1.1"

# Cron
croner = "3.0"

# CLI
clap = { version = "4.6", features = ["derive", "env"] }

# Telemetry
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", default-features = false, features = [
    "env-filter",
    "fmt",
    "json",
    "ansi",
    "smallvec",
] }

# Errors
anyhow = "1.0.102"
thiserror = "2.0.18"

# Secrets (serde feature is MANDATORY — D-20)
secrecy = { version = "0.10.3", features = ["serde"] }

# Time
chrono = { version = "0.4.44", default-features = false, features = ["std", "serde", "clock"] }
chrono-tz = "0.10.4"

# Docker API client (DOCKER-01)
bollard = "0.20"
futures-util = "0.3"

# Process execution
shell-words = "1.1"
tempfile = "3"
libc = "0.2"

# Utilities
sha2 = "0.10"
serde_json = "1"
url = "2"
regex = "1"
once_cell = "1"

# Templates (UI-02)
askama = "0.15"
askama_web = { version = "0.15", features = ["axum-0.8"] }

# Embedded assets (UI-01, D-17)
rust-embed = "8.11"

# HTMX helpers (D-10)
axum-htmx = { version = "0.8", features = ["serde"] }

# Extra extractors — cookies for CSRF, query for filter/sort (D-11, D-02)
axum-extra = { version = "0.12", features = ["cookie", "query"] }

# ANSI to HTML (D-06)
ansi-to-html = "0.2"

# Random bytes for CSRF tokens and @random cron slot picker (D-13/FOUND-12)
rand = "0.9"

# Hex encoding for CSRF tokens
hex = "0.4"

# Metrics (OPS-02)
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# SSE streaming
async-stream = "0.3"

# MIME type guessing for embedded assets
mime_guess = "2"
notify = "8.2"

[features]
# Opt-in feature gate for test suites that require real backing services
# (currently: Postgres regression tests in tests/docker_orphan_guard.rs under
# `#[cfg(feature = "integration")]`). Declared here so that `cfg` checks do
# not trip the `unexpected_cfgs` lint under `clippy -D warnings`. Enable with
# `cargo test --features integration` on hosts where a Docker daemon is
# available for testcontainers-backed Postgres tests.
integration = []

[dev-dependencies]
testcontainers = "0.27.2"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
assert_cmd = "2"
predicates = "3"
tower = { version = "0.5", features = ["util"] }
# Phase 10 plan 10-05: T-V11-STOP-04 uses tokio::time::pause + advance for
# deterministic race tests. The `test-util` feature is NOT included in tokio's
# `full` feature set, so enable it here for dev builds only.
tokio = { version = "1.51", features = ["full", "test-util"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
